--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
 
+spring.security.oauth2.client.registration.google.client-id = 940390331205-b81rnapb83uoqb4quavo8uu6cl30nm3e.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret = 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
+
+
 #spring.jpa.show-sql=true
 #spring.h2.console.enabled=true
 
